--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1"
+    "ejs": "^3.1.10",
+    "express": "^4.21.1",
+    "express-partials": "^0.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
