--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
-    "express-partials": "^0.3.0"
+    "express-partials": "^0.3.0",
+    "express-rate-limit": "^7.4.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
