--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "express-partials": "^0.3.0",
-    "express-rate-limit": "^7.4.1"
+    "express-rate-limit": "^7.4.1",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
